# PyroImager

./: .gitignore  README.md  pyproject.toml
example/: cs165cu_quantum_efficiency.xlsx  example_cs165cu.py
pyrometer/: __init__.py  core.py  image_io.py  plotting.py
